plugins {
    id 'java'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.spotbugs' version '6.0.26'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.schemafy'
version = '0.0.1-SNAPSHOT'
description = 'core module'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.boot:spring-boot-dependencies:3.5.5'
    }
}

dependencies {
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework:spring-web'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Integration test dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'io.r2dbc:r2dbc-h2'
    testRuntimeOnly 'com.h2database:h2'

    spotbugs 'com.github.spotbugs:spotbugs:4.8.6'
    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.13.0'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["-parameters"]
}

def formatterConfig = file("${projectDir}/../../../gradle/format/java-formatter.xml")

spotless {
    java {
        target 'src/**/*.java'
        eclipse().configFile(formatterConfig)
        removeUnusedImports()
        importOrder(
                'java',
                'jakarta',
                'org.springframework',
                'org',
                'com',
                '',
                '\\#'
        )
        trimTrailingWhitespace()
        endWithNewline()
    }
}

spotbugs {
    toolVersion = '4.8.6'
    effort = 'max'
    reportLevel = 'medium'
    ignoreFailures = false
    omitVisitors = ['FindReturnRef']
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
    enabled = true
    classes = classes.filter {
        !it.path.contains('/lombok/') && !it.path.contains('/grpc/')
    }

    jvmArgs = [
        '-Dspotbugs.sf.comment=true',
        '-Dfindbugs.verbose=true'
    ]
    maxHeapSize = '1024m'

    reports {
        html {
            required = true
            outputLocation = layout.buildDirectory.file('reports/spotbugs/main.html')
            stylesheet = 'fancy-hist.xsl'
        }
        xml {
            required = true
            outputLocation = layout.buildDirectory.file('reports/spotbugs/main.xml')
        }
        sarif {
            required = true
            outputLocation = layout.buildDirectory.file('reports/spotbugs/main.sarif')
        }
    }
}

tasks.named('spotbugsTest') {
    enabled = false
}

test {
    useJUnitPlatform()
}

sourceSets {
    test {
        resources {
            srcDir 'src/test/resources'
            srcDir '../sql-resources'
        }
    }
}

tasks.named('processTestResources') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named('check') {
    dependsOn 'spotlessCheck'
}
